<resources>
    <string name="app_name">Learning English Team</string>
    <string name="app_version">1.0</string>
    <string name="let_learning_english_team_a1_a2_b1_b2">Привет, мы команда LET - Learning English Team ! Мы вместе прокачаем твои знания. Данное приложение имеет несколько ступеней английского A1-A2(начальный) и B1-B2(средний)</string>
    <string name="let">Добро пожаловать в LET!</string>
    <string name="b1_b2">Средний (B1-B2)</string>
    <string name="a1_a2">Начальный (A1-A2)</string>
    <string name="deepapps">DeepApps</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="we_re_let_we_ll_together_make_your_english_better_in_base_level">Мы - LET. \nМы вместе сделаем твой английский лучше на базовом уровне</string>
    <string name="next">Далее</string>
    <string name="or">Или</string>
    <string name="i_already_have_account"><u>У меня уже есть аккаунт</u></string>
    <string name="an_exception_has_occurred">Возникло исключение</string>
    <string name="it_s_time_for_questions">Время \nдля вопросов</string>
    <string name="why_do_you_want_to_learn_english">Для чего вы хотите \nизучать английский?</string>
    <string name="travels">Путешествия</string>
    <string name="education">Образование</string>
    <string name="no_reason">Просто так</string>
    <string name="other">Другое</string>
    <string name="account">Профиль</string>
    <string name="well_now_create_account_it_s_need_for_statistic_and_for_keep_your_progress_save">Хорошо! Теперь создайте аккаунт. \nЭто нужно для статистики\n и для сохранения вашего прогресса</string>
    <string name="write_email">Напишите Email</string>
    <string name="write_your_current_password">Напишите Пароль</string>
    <string name="study">Учеба</string>
    <string name="love">Любовь</string>
    <string name="interest">Простой интерес</string>
    <string name="profession">Профессия</string>
    <string name="development">Развитие</string>
    <string name="next_list">Далее</string>
    <string name="questionsUsers">С какой целью Вы изучаете английский?</string>
    <string name="help_me_to_generate_strong_password">Помогите мне создать\n надежный пароль</string>
    <string name="youre_done">Все готово!</string>
    <string name="lockwood_welcome">Меня зовут LockWood! \nЯ помогу тебе с твоим обучением по Английскому языку. \nНажмите кнопку "Далее", чтобы продолжить</string>
    <string name="menu">Меню</string>
    <string name="select_category">Выберете категорию ниже</string>
    <string name="levels">Уровни</string>
    <string name="change_language">Изменить язык</string>
    <string name="topic">Выбрать тему</string>
    <string name="paid_content">Платный контент</string>
    <string name="restoring_life">Время восстановление жизни:</string>
    <string name="additional_settings">Дополнительные настройки</string>
    <string name="try_without_account">Попробовать без аккаунта</string>
    <string name="enter_in_account_context_text">Хорошо! Тогда введите вашу\nПочту и Пароль ниже</string>
    <string name="I_forgot_my_password">Я забыл мой пароль</string>
    <string name="others">Другое</string>
    <string name="tiles_opacity_and_sounds">Прозрачность плиток \nи звуки\n</string>
    <string name="reset">Сбросить</string>
    <string name="about">О программе</string>
    <string name="info_about_app_and_premium">Информация о Приложении\nи Премиуме</string>
    <string name="premium">Премиум</string>
    <string name="settings">Настройки</string>
    <string name="customize_app_for_yourself">Настрой приложение под себя</string>
    <string name="reset_all">Сбросить все</string>
    <string name="password_restoring">Восстановление пароля</string>
    <string name="enter_your_email_to_reset_password">Введите вашу почту, \nчтобы восстановить пароль</string>
    <string name="your_email">Ваш Email</string>
    <string name="account_info_subtext">Информация о профиле, \nсмена почты и пароля и др…</string>
    <string name="change_email">Изменить <u>почту</u></string>
    <string name="change_password">Изменить <u>пароль</u></string>

    <string name="log_out">Выйти</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="email_changing">Смена Email</string>
    <string name="email">Новый Email</string>
    <string name="your_password">Ваш пароль</string>
    <string name="enter_a_data_below_to_change_email">Введите необходимые данные ниже, чтобы <b>сменить Email</b></string>
    <string name="password_changing">Смена пароля</string>
    <string name="enter_data_below_to_change_password">Введите необходимые данные ниже, чтобы <b>сменить пароль</b></string>
    <string name="new_password">Новый пароль</string>
    <string name="current_password">Текущий пароль</string>
    <string name="what_if_i_lost_password"><u>Что, если \nпароль потерян?</u></string>
    <string name="please_select_something">Пожалуйста, выберете что-то из списка</string>
    <string name="fill_this_field">Заполните это поле</string>
    <string name="ok">OK</string>
    <string name="no">Отмена</string>
    <string name="hello">Привет</string>
    <string name="language_starter">Языки</string>
    <string name="russian_language">Русский</string>
    <string name="english_language">Английский</string>
    <string name="_1_2">Начальный(А1-А2)</string>
    <string name="base">Средний(B1-B2)</string>
    <string name="paid_content_starter">Платный контент</string>
    <string name="text_paine_content">Платный контент базируется на безлимитном восстановлении жизней на период</string>
    <string name="_1">1 неделя</string>
    <string name="one_month">1 месяц</string>
    <string name="one_year">1 год</string>
    <string name="additional_settings_starter">Дополнительны \nнастройки</string>
    <string name="sounds">Звуки</string>
    <string name="notifications">Уведомления</string>
    <string name="shadows">Тени</string>
    <string name="reset_settings">Сброс настроек</string>
    <string name="password_must_have_a_length_at_least">Пароль должен не короче</string>
    <string name="symbols">символов</string>
    <string name="password_must_contains_lower_cases">Пароль должен содержать строчные буквы</string>
    <string name="password_must_contains_upper_cases">Пароль должен содержать заглавные буквы</string>
    <string name="password_must_contains_digits">Пароль должен содержать цифры</string>
    <string name="youre_enter">Поздравляю, Вы вошли в свой аккаунт. \nНажмите кнопку <b>Далее</b>, чтобы продолжить</string>
    <string name="on">Вкл.</string>
    <string name="off">Выкл.</string>
    <string name="tiles_opacity">Прозрачность плиток</string>
    <string name="name">Название: </string>
    <string name="version">Версия: </string>
    <string name="sdk_version">Версия SDK: </string>
    <string name="developer">Разработчик: </string>
    <string name="your_lifes">Ваши жизни</string>
    <string name="lifes_info">Информация <u>о жизнях</u></string>
    <string name="lockwood_lifes_info_text">Следите за вашими жизнями, как только они достигнут <b>0%</b>, \nвам будет <u>ограничен</u> доступ к новым урокам <u>в течение 25 минут</u>.\n Здоровье уменьшается за каждое неправильно выполненное задание</string>
    <string name="lets_study_starts">Давайте \nначнем обучение</string>
    <string name="welcome_back">Добро пожаловать \nназад</string>
    <string name="welcome_back_user">С возвращением, </string>
    <string name="glad_to_see_you_again">Рад видеть Вас. Теперь вы можете продолжить ваше обучение, нажав на "Далее"</string>
</resources>