<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_starter"
    tools:context=".QuestionsUserStarter">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="336dp"
        android:layout_height="543dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/tile_background_starter"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:paddingTop="15dp"
            android:text="@string/questionsUsers"
            android:textAlignment="center"
            android:textColor="#0D0C0C"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#06BF0D"
            android:text="@string/travels"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/study"
            android:textSize="20sp"
            android:buttonTint="#06BF0D"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/love"
            android:textSize="20sp"
            android:buttonTint="#06BF0D"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interest"
            android:textSize="20sp"
            android:buttonTint="#06BF0D"/>

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profession"
            android:textSize="20sp"
            android:buttonTint="#06BF0D"/>

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/development"
            android:textSize="20sp"
            android:buttonTint="#06BF0D"/>

        <LinearLayout
            android:layout_width="336dp"
            android:layout_height="143dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="152dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/smart_owl"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="-23dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonStarterSecondAction"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_background_white"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="DeepApps"
        android:textAlignment="center"
        android:textColor="#141313"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="299dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="29dp"
        android:background="#00BD9B9B"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="299dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#00D7C9C9"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_back"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>