<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_base"
    tools:context=".base.activities.initialSettings.QuestionsActivityBase">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/button_back"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:elevation="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/deepapps"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        style="@style/tile_base"
        android:layout_height="403dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="95dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/titles_base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/it_s_time_for_questions" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/context_labels_base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/why_do_you_want_to_learn_english" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        style="@style/radio_buttons_base"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/travels" />

                    <RadioButton
                        style="@style/radio_buttons_base"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/education" />

                    <RadioButton
                        style="@style/radio_buttons_base"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_reason" />

                    <RadioButton
                        style="@style/radio_buttons_base"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/other" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonNext"
                    style="@style/button_next_base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="189dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/questions" />
</androidx.constraintlayout.widget.ConstraintLayout>