<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_base"
    tools:context=".base.activities.AccountActivityBase">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="189dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/account" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:elevation="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/deepapps"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        style="@style/tile_base"
        android:layout_marginStart="65dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/tile_background_base"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView4"
                    style="@style/titles_base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/account" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/context_labels_base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/well_now_create_account_it_s_need_for_statistic_and_for_keep_your_progress_save" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:hint="@string/write_email"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    style="@style/edit_text_base"
                    android:drawableEnd="@drawable/email"
                    android:inputType="textEmailAddress" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/write_your_current_password"
                    style="@style/text_input_layout"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/edit_text_base"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>