<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_base"
    tools:context=".base.activities.initialSettings.EnterInAccountActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:background="@color/transparent"
        android:src="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="189dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/account_2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:elevation="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/deepapps"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        style="@style/tile_base"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="186dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/titles_base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/account" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/context_labels_base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/enter_in_account_context_text" />

                <EditText
                    android:id="@+id/emailEditText"
                    style="@style/edit_text_base"
                    android:layout_width="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:drawableEnd="@drawable/email"
                    android:ems="10"
                    android:hint="@string/write_email"
                    android:inputType="textEmailAddress" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordEditText"
                    style="@style/text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:hint="@string/write_your_current_password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/edit_text_base"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/forgotPasswordButton"
                    android:layout_width="219dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@color/transparent"
                    android:drawableEnd="@drawable/sad_smile"
                    android:fontFamily="@font/inter_light"
                    android:text="@string/I_forgot_my_password"
                    android:textAllCaps="false"
                    android:textColor="@color/generate_strong_password_text_view"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonNext"
                    style="@style/button_next_base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/red_button_background_base" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>